@@ -1,4 +1,6 @@
 Version 0.9.5-svn - unknown
+- add SMS rate by prefix
+- add SMS credit per user
 - rename execgwcustomcmd() to playsmsd()
 - change label success to handled and fail to unhandled, status on incoming SMS (anton)
 - revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
